--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "whitworf/geoip2",
+	"name": "whitworf/geoip2-bundle",
 	"require": {
 		"php": ">=5.3.0",
 		"geoip2/geoip2": "dev-master"
