--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
 	"require": {
 		"php": ">=5.4.0",
 		"geoip2/geoip2": "dev-master"
+	},
+	"autoload": {
+		"psr-0": {
+			"WhitworfGeoIP2": "/"
+		}
 	}
 }
