--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,1 @@
-{
-	"name": "whitworf/geoip2-bundle",
-	"require": {
-		"php": ">=5.4.0",
-		"geoip2/geoip2": "dev-master"
-	},
-	"autoload": {
-		"psr-0": {
-			"Whitworf\\GeoIP2Bundle\\": "/"
-		}
-	}
-}
+{"name":"whitworf/geoip2-bundle","require":{"php":">=5.4.0","geoip2/geoip2":"dev-master"},"autoload":{"psr-0":{"Whitworf\\GeoIP2Bundle":"src/"}}}
